--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </main>
 
   <footer>
-    <p>&copy; The FOSS Technical Club</p>
+    <p>&copy; The FOSS Club</p>
     <nav>
       <ul>
         <li><a href="#">Contact</a></li>
