changed social media link icons size

--- a/index.html
+++ b/index.html
@@ -303,18 +303,18 @@
             <div class="footer-content">
                 <div class="social-links">
                     <a href="https://github.com/thefossclub" target="_blank"
-                        ><i class="fab fa-github fa-2x"></i
+                        ><i class="fab fa-github fa-md"></i
                     ></a>
                     <a href="https://twitter.com/thefossclub" target="_blank"
-                        ><i class="fab fa-twitter fa-2x"></i
+                        ><i class="fab fa-twitter fa-md"></i
                     ></a>
                     <a
                         href="https://linkedin.com/company/thefossclub"
                         target="_blank"
-                        ><i class="fab fa-linkedin fa-2x"></i
+                        ><i class="fab fa-linkedin fa-md"></i
                     ></a>
                     <a href="https://instagram.com/thefossclub" target="_blank"
-                        ><i class="fab fa-instagram fa-2x"></i
+                        ><i class="fab fa-instagram fa-md"></i
                     ></a>
                 </div>
                 <ul>
