--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     Learn, build, and collaborate with fellow open-source
                     enthusiasts.
                 </p>
-                <a href="#join" class="cta-button">Join Now</a>
+                <a href="https://opnform.com/forms/the-foss-club-registration-nst4zs" class="cta-button">Join Now</a>
             </section>
 
             <section id="about" class="section">
