Join buttons in nav-links and mainTitle redirect to external website, fixed bug causing inability to interact with the join button in mainTitle, removed in site form for joining, join buttons work as intended now

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#events">Events</a></li>
                     <li><a href="#team">Team</a></li>
                     <li><a href="#blog">Blog</a></li>
-                    <li><a href="#join">Join</a></li>
+                    <li><a href="https://opnform.com/forms/the-foss-club-registration-nst4zs" target="_blank">Join</a></li><!--replaced on site forrum to external redirect, opening it in a new tab-->
                     <li><a href="#resources">Resources</a></li>
                 </ul>
                 <div class="nav-toggle">
@@ -46,7 +46,7 @@
                     Learn, build, and collaborate with fellow open-source
                     enthusiasts.
                 </p>
-                <a href="#join" class="cta-button">Join Now</a>
+                <a href="https://opnform.com/forms/the-foss-club-registration-nst4zs" target="_blank" class="cta-button">Join Now</a><!--replaced on site forrum to external redirect, opening it in a new tab-->
             </section>
 
             <section id="about" class="section">
@@ -220,7 +220,7 @@
                 </div>
             </section>
 
-            <section id="join" class="section">
+            <!--<section id="join" class="section">
                 <h2>Join the FOSS Club</h2>
                 <form id="join-form">
                     <input
@@ -242,7 +242,7 @@
                     ></textarea>
                     <button type="submit">Submit Application</button>
                 </form>
-            </section>
+            </section>--><!--Removed the onsite forrum-->
 
             <section id="resources" class="section">
                 <h2>Resources</h2>
