changed the colors new hero button ui elements in proper ratio better light theme

--- a/index.html
+++ b/index.html
@@ -157,10 +157,77 @@
                 </div>
             </section>
 
-            <section id="team" class="section">
+
+            <section id="team">
                 <h2>Our Team</h2>
-                <div class="team-grid">
-                    <!-- Team members will be dynamically added here -->
+                <div class="member-grid">
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="John Doe">
+                        <h3>John Doe</h3>
+                        <p class="role">President</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Jane Smith">
+                        <h3>Jane Smith</h3>
+                        <p class="role">Vice President</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Mike Johnson">
+                        <h3>Mike Johnson</h3>
+                        <p class="role">Secretary</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Emily Brown">
+                        <h3>Emily Brown</h3>
+                        <p class="role">Treasurer</p>
+                    </div>
+                </div>
+            </section>
+            
+            <section id="mentors">
+                <h2>Our Mentors</h2>
+                <div class="member-grid">
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Dr. Sarah Johnson">
+                        <h3>Dr. Sarah Johnson</h3>
+                        <p class="role">Technical Advisor</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Prof. David Chen">
+                        <h3>Prof. David Chen</h3>
+                        <p class="role">Industry Mentor</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Lisa Wong">
+                        <h3>Lisa Wong</h3>
+                        <p class="role">Open Source Advocate</p>
+                    </div>
+                </div>
+            </section>
+            
+            <section id="active-members">
+                <h2>Active Members</h2>
+                <div class="member-grid">
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Alex Turner">
+                        <h3>Alex Turner</h3>
+                        <p class="role">Lead Developer</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Maria Garcia">
+                        <h3>Maria Garcia</h3>
+                        <p class="role">Security Researcher</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Tom Lee">
+                        <h3>Tom Lee</h3>
+                        <p class="role">UI/UX Designer</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Sophia Chen">
+                        <h3>Sophia Chen</h3>
+                        <p class="role">Data Scientist</p>
+                    </div>
                 </div>
             </section>
 
